# earnings-call-intelligence

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-06-30-earnings-call-intelligence-design.md
features/00-infra-baseline/: verify.md  vision.md
features/01-shared-libs/: verify.md  vision.md
features/02-temporal-platform/: verify.md  vision.md
features/03-observability/: verify.md  vision.md
features/04-cicd/: verify.md  vision.md
features/05-data-model/: verify.md  vision.md
features/10-discovery-seed/: verify.md  vision.md
features/11-classification-claude/: verify.md  vision.md
features/12-scheduler-workflow/: verify.md  vision.md
features/13-recorder-single-adapter/: verify.md  vision.md
features/14-transcription-gpu-basic/: verify.md  vision.md
features/15-indexing-opensearch/: verify.md  vision.md
features/16-api-rest-ws/: verify.md  vision.md
features/17-frontend-mvp/: verify.md  vision.md
frontend/: package.json
libs/common/: pyproject.toml
libs/common/src/common/: __init__.py  aws.py  logging.py  settings.py  tracing.py
libs/common/tests/: test_settings.py
libs/db/: alembic.ini  pyproject.toml
libs/db/migrations/: env.py
libs/db/migrations/versions/: 3eb743bcb70e_initial_schema.py
libs/db/src/db/: __init__.py  models.py  session.py
libs/db/tests/: test_migration.py  test_models.py
libs/events/: pyproject.toml
libs/events/src/events/: __init__.py  envelope.py  kafka.py  schemas.py
libs/events/tests/: test_events.py
libs/temporal/: pyproject.toml
libs/temporal/src/temporal/: __init__.py  retry.py  worker.py
libs/temporal/tests/: test_temporal.py
tests/: test_smoke.py
