[project]
name = "earnings-call-intelligence"
version = "0.0.0"
description = "Real-time event-driven platform for discovering, recording, transcribing, and publishing earnings-call webcasts."
requires-python = ">=3.12"
readme = "README.md"

# Service/library packages are managed as a uv workspace. Members are added as
# each feature lands a real package (with its own pyproject.toml).
[tool.uv.workspace]
members = ["libs/common", "libs/events", "libs/temporal"]

[tool.uv.sources]
eci-common = { workspace = true }
eci-events = { workspace = true }
eci-temporal = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.8",
    "eci-common",
    "eci-events",
    "eci-temporal",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["frontend", "infra"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["common", "events", "temporal"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "libs", "services", "workflows"]
addopts = "-ra -q"
