[project]
name = "eci-common"
version = "0.0.0"
description = "Shared cross-cutting helpers: logging, tracing, settings, AWS clients."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "boto3>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]
