[project]
name = "eci-db"
version = "0.0.0"
description = "Canonical relational data model (SQLAlchemy) and Alembic migrations."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "eci-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]

[tool.uv.sources]
eci-common = { workspace = true }
