[project]
name = "eci-temporal"
version = "0.0.0"
description = "Temporal worker base, retry-policy presets, and activity helpers."
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7",
    "eci-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal"]

[tool.uv.sources]
eci-common = { workspace = true }
